--- a/wiki/DebmarshalLocalRepositorySetup.wiki
+++ b/wiki/DebmarshalLocalRepositorySetup.wiki
@@ -117,4 +117,4 @@ total 12
 
 The packages themselves should be moved to subdirectories of pool/, and no files should remain in incoming after a successful upload.
 
-*.build files are not normally part of an upload, and would be left behind.  *.changes files will be deleted on unsuccessful uploads, to prevent the uploader from trying and failing to verify them repeatedly.
+.build files are not normally part of an upload, and would be left behind.  .changes files will be deleted on unsuccessful uploads, to prevent the uploader from trying and failing to verify them repeatedly.
