--- a/wiki/DebmarshalLocalRepositorySetup.wiki
+++ b/wiki/DebmarshalLocalRepositorySetup.wiki
@@ -168,4 +168,4 @@ This functionality is very similar to the recently uploaded edos-distcheck, whic
 
 == Staging and export ==
 
-These are carried out using the same commands, but in the local rather than debian (or ubuntu) repository.  The same labels as in the upstream mirror are usually updated at the same time, as they are tested together.  See DebmarshalRepositoryMirrorSetup#Staging .
+These are carried out using the same commands, but in the local rather than debian (or ubuntu) repository.  The same labels as in the upstream mirror are usually updated at the same time, as they are tested together.  See [DebmarshalRepositoryMirrorSetup#Staging] .
